# Docxodus

./: .gitignore  CHANGELOG.md  CLAUDE.md  Docxodus.sln  README.md
.github/workflows/: ci.yml  claude-code-review.yml  playwright.yml  publish.yml  python-publish.yml
Docxodus/: AnnotationManager.cs  DocumentBuilder.cs  DocxDiff.cs  DocxDiffCompatibility.cs  DocxDiffConsolidate.cs  DocxSession.cs  Docxodus.csproj  ExternalAnnotationProjector.cs  FormattingAssembler.cs  ListItemRetriever.cs  MarkupSimplifier.cs  RevisionProcessor.cs  UnidHelper.cs  WmlComparer.cs  WmlToHtmlConverter.cs  WmlToMarkdownConverter.cs  WmlToXml.cs
Docxodus.Tests/: DocumentMetadataTests.cs  DocxDiffConsolidateApiTests.cs  DocxDiffFootnoteRobustnessTests.cs  DocxDiffHeaderFooterSmokeTests.cs  DocxDiffOpsConsolidateTests.cs  DocxDiffScenarioTests.cs  DocxDiffTests.cs  DocxSessionPR131RegressionTests.cs  DocxSessionS1FeaturesTests.cs  DocxSessionTableEditTests.cs  DocxSessionTests.cs  Docxodus.Tests.csproj  ExternalAnnotationTests.cs  HtmlConversionOpsTests.cs  HtmlConverterTablePercentageWidthTests.cs  HtmlConverterTests.cs  MarkdownPayloadParserTests.cs  WmlComparerBodyLevelElementsTests.cs  WmlComparerParallelRaceTests.cs  WmlToMarkdownConverterTests.cs
Docxodus.Tests/Ir/: IrTestDocuments.cs
Docxodus/Internal/: BlankDocumentFactory.cs  BlockMetadataOps.cs  DocxDiffOps.cs  DocxSessionJson.cs  DocxSessionOps.cs  HtmlConversionOps.cs  ListNumberResolver.cs  MarkdownPayloadParser.cs  NumberingFactory.cs  RunTextMap.cs  SessionRegistry.cs  StyleFactory.cs  SymbolFontMapper.cs
Docxodus/Ir/: IrBlocks.cs  IrFormats.cs  IrHasher.cs  IrReader.cs
TestFiles/RC/: RC100-Conflict-Alice.docx  RC100-Conflict-Base.docx  RC100-Conflict-Bob.docx
TestFiles/WC/: WC-InsEvenHeader-After.docx  WC-InsEvenHeader-Before.docx  WC-InsFirstHeader-After.docx  (+5 more)
docs/: npm-package.md  ooxml_corner_cases.md
npm/: package-lock.json  package.json
python/: .gitignore  README.md  RELEASING.md  pyproject.toml
python/scripts/: build_host.sh
python/src/docx_scalpel/: __init__.py  _host_locator.py  _transport.py  enums.py  errors.py  session.py  types.py
python/tests/: conftest.py  test_docx_diff.py  test_fill_placeholders.py  test_find_options_scopes.py  test_lifecycle.py  test_smoke.py  test_to_html.py
ts/: package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
(+163 files in other folders)
