[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "docx-scalpel"
version = "0.1.0a0"
description = "Anchor-addressed DOCX editing for LLM agents — a thin client over Docxodus' DocxSession."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Docxodus contributors" }]
keywords = ["docx", "ooxml", "llm", "agent", "document-editing", "redline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.4"]

[project.urls]
Homepage = "https://github.com/JSv4/Docxodus"
Repository = "https://github.com/JSv4/Docxodus"
Issues = "https://github.com/JSv4/Docxodus/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/docx_scalpel"]
# CI stages the per-RID host binary at src/docx_scalpel/_bin/docxodus-pyhost
# before building the wheel — see .github/workflows/python-publish.yml and
# python/RELEASING.md. We deliberately don't auto-pick from vendor/<rid>/
# here because the wheel must contain exactly one (flat) binary, not all RIDs.
# .gitignore excludes src/docx_scalpel/_bin/ so a 100+ MB binary never reaches
# git; this `artifacts` override tells hatchling to include the staged file
# in the built wheel anyway. Glob is intentionally permissive so the same
# pyproject works for unix (docxodus-pyhost) and win (docxodus-pyhost.exe).
artifacts = ["src/docx_scalpel/_bin/*"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/scripts",
    "/README.md",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: tests that take more than a few seconds",
]
